--- a/styles.css
+++ b/styles.css
@@ -70,40 +70,36 @@ section {
                             HEADER
 --------------------------------------------------------------*/
 
-
 .header-scrolled {
-    background-color: black;
+    background-color: rgba(78, 78, 78, 0.8);
 }
 
-#header .logo {
-    font-size: var(--mid-font-size);
-    padding: 30px 0;
-    margin: 0;
-    padding: 0;
-    font-weight: 600;
-    letter-spacing: 1px;
-}
-
-.header-container {
-    display: flex;
-    align-items: center;
-    justify-content:space-between;
-}
-
-.navbar {
-    padding: 0;
+header a {
+    text-decoration: none;
 }
   
-.navbar ul {
-    margin: 0;
-    padding: 0;
+header {
+    padding: 0 20px;
+    height: 60px;
     display: flex;
-    list-style: none;
-    align-items: center;
+    justify-content: space-between;
 }
 
-.navbar li {
-    position: relative;
+ul {
+    list-style: none;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+  
+ul a {
+    color: white;
+}
+  
+ul li {
+    padding: 5px;
+    margin-left: 10px;
 }
 
 .navbar>ul>li {
@@ -162,9 +158,12 @@ section {
 }
 
 .logo {
-    object-fit: cover;
-    height: 3rem;
-    width: 4rem;
+    font-weight: bold;
+    font-size: 40px;
+    display: flex;
+    align-items: center;
+    cursor: pointer;
+    color: white;
 }
 
 .nav-toggle {
@@ -211,13 +210,20 @@ section {
   }
 
   .navbar-mobile {
-    display: none;
-    position: absolute;
-    top: 50px;
+    position: fixed;
+    top: 60px;
     left: 0;
-    height: calc(100vh - 50px);
-    width: 100%;
+    right: 0;
+    height: auto;
+    background: rgba(78, 78, 78, 0.9);
+    transition: 0.3s;
   }
+
+  .navbar-mobile a:hover {
+    text-decoration: underline;
+  }
+
+
 @media (max-width: 991px) {
     .navbar ul {
         display: none;
@@ -226,8 +232,7 @@ section {
     #nav-toggle {
         display: block;
       }
-
-
+      
   }
 
 /*--------------------------------------------------------------
@@ -302,6 +307,8 @@ section {
     text-align: center;
     padding: 15px;
     font-size: var(--mid-font-size);
+    text-decoration: underline;
+    text-decoration-color: var(--secondary-color);
 }
 
 .about-content {
@@ -310,7 +317,8 @@ section {
     justify-content: center;
     flex-direction: column;
     font-size: var(--small-font-size);
-    padding-top: 20px;
+    padding: 20px;
+    color: black;
 }
 
 @media screen and (max-width: 1000px) {
@@ -325,35 +333,91 @@ section {
 /*--------------------------------------------------------------
                             SKILLS
 --------------------------------------------------------------*/
+
 #skills {
-    background-color: var(--white-background-color);
+    background-image: linear-gradient(
+    135deg,
+    var(--gradient-primary-color) 0%,
+    var(--primary-color) 100%
+  );
+  color: white;
+  border-top: 0px;
 }
 
-.skill-title {
+
+.skill-desc {
+    color: black;
+    font-size: var(--small-font-size);
+}
+
+.skill-box {
+    background-color: #fff;
+    padding: 2.5rem 1.3rem;
+    border-radius: 1rem;
+    margin-bottom: 3rem;
+    text-align: center;
+}
+
+.skill-box .skill-icon {
+    margin-bottom: 1rem;
+    color: #1e1e1e;
+}
+
+.skill-box .fa-circle {
+    transition: all 500ms ease;
+    display: inline-flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--gradient-primary-color);
+}
+
+.skill-box .fa-circle i {
+    line-height: 0;
+    font-size: 40px;
+}
+
+.skill-box:hover .fa-circle {
+    transition: all 500ms ease;
+    color: var(--gradient-secondary-color);
+}
+
+.skill-box:hover {
+    box-shadow: 0 10px 20px -10px #333;
+    transform: scale(1.1);
+}
+
+.skill-box .skill-title {
+    font-size: 1.4rem;
+    text-align: center;
+    padding: 0.4rem 0;
+}
+
+.skill-box .skill-content {
+    color: #4e4e4e;
+}
+
+.skills-main-title {
     text-align: center;
     text-decoration: underline;
     text-decoration-color: var(--secondary-color);
     padding: 15px;
     font-size: var(--mid-font-size);
+    color: white;
 }
 
-.skill-desc {
-    font-size: var(--small-font-size);
+.skill-main-desc {
+    color: white;
 }
 
-.skill-content {
-    background-color: white;
-    padding: 1rem;
-    border-radius: 1rem;
-    box-shadow: 0 15px 10px -4px rgba(0, 0, 0, 0.1);
-}
-
-.skills-container {
-    padding: 1rem;
-}
 /*--------------------------------------------------------------
                             PROJECTS
 --------------------------------------------------------------*/
+.projects {
+    height: auto;
+    background-color: var(--white-background-color);
+    color: black;
+}
+
 .projects-title {
     text-align: center;
     text-decoration: underline;
@@ -364,10 +428,31 @@ section {
 .projectImg {
     object-fit: cover;
     height: 20rem;
-    width: 30rem;
+    width: 40rem;
     margin: 0.5rem;
+    transition: transform 0.5s;
 }
 
+.project-btn {
+    position: relative;
+    display: inline-block;
+    text-decoration: none;
+    padding: 0.8rem var(--default-font-size);
+    border-width: 2px;
+    border-style: solid;
+    color: var(--gradient-secondary-color);
+    transition: background-color 0.5s;
+}
+
+.project-btn:hover {
+    color: white;
+    background-color: var(--gradient-secondary-color);
+}
+
+.projectImg:hover {
+    box-shadow: 0 10px 20px -10px #333;
+    transform: scale(1.1);
+}
 /*--------------------------------------------------------------
                             CONTACT
 --------------------------------------------------------------*/
@@ -378,7 +463,7 @@ section {
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background-color: #333;
+    background-color: var(--white-background-color);
 }
 
 .contactTitle {
@@ -433,6 +518,7 @@ footer {
     width: 100vw;
     padding: 25px 0;
     text-align: center;
+    background-color: #333;
 }
 
 .home_social {
