--- a/styles.css
+++ b/styles.css
@@ -1,38 +1,39 @@
 :root {
-    --white-background-color: #f5f5f5;
+  --white-background-color: #f5f5f5;
 
-    --primary-color: #610C9F;
-    --secondary-color: pink;
+  --primary-color: #FD6F96;
+  --secondary-color: #FFEBA1;
+  --third-color: #95DAC1;
+  --fourth-color: #6F69AC;
 
-    --gradient-primary-color: #A770EF;
-    --gradient-secondary-color: #00cdac;
+  --gradient-primary-color: #a770ef;
+  --gradient-secondary-color: #00cdac;
 
-    --default-font-size: 1.5rem;
-    --big-font-size: 4rem;
-    --mid-font-size: 2.5rem;
-    --small-font-size: 1.2rem;
-    --extrasmall-font-size: 0.5rem;
-
+  --default-font-size: 1.5rem;
+  --big-font-size: 4rem;
+  --mid-font-size: 2.5rem;
+  --small-font-size: 1.2rem;
+  --extrasmall-font-size: 0.5rem;
 }
 
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    text-decoration: none;
-    background-color: transparent;
-    font-family: 'Pridi', 'sans-serif';
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+  text-decoration: none;
+  background-color: transparent;
+  font-family: "Pridi", "sans-serif";
 }
 
 body {
-    background: #610C9F;
-    color: var(--white-background-color);
-    overflow: hidden;
+  background: #610c9f;
+  color: var(--white-background-color);
+  overflow: hidden;
 }
 
 html {
-    scroll-snap-type: y mandatory;
-    overflow-y: scroll;
+  scroll-snap-type: y mandatory;
+  overflow-y: scroll;
 }
 
 h1,
@@ -45,234 +46,238 @@ h6 {
 }
 
 h1 a {
-    color: white;
-    text-decoration: none;
+  color: white;
+  text-decoration: none;
 }
 
 section {
-    scroll-snap-align: start;
-    padding: 5rem 0rem;
-    height: 100vh;
+  scroll-snap-align: start;
+  padding: 5rem 0rem;
+  height: 100vh;
 }
 
 .tag {
-    opacity: 0;
-    transform: translate(0, 10vh);
-    transition: all 1s;
+  opacity: 0;
+  transform: translate(0, 10vh);
+  transition: all 1s;
 }
 
 .tag.visible {
-    opacity: 1;
-    transform: translate(0, 0);
+  opacity: 1;
+  transform: translate(0, 0);
 }
+
+.title {
+    text-align: center;
+    padding: 15px;
+    font-size: var(--mid-font-size);
+    text-decoration: underline;
+    text-decoration-color: var(--secondary-color);
+  }
 
 /*--------------------------------------------------------------
                             HEADER
 --------------------------------------------------------------*/
 
 .header-scrolled {
-    background-color: rgba(78, 78, 78, 0.8);
+  background-color: rgba(78, 78, 78, 0.8);
 }
 
 header a {
-    text-decoration: none;
+  text-decoration: none;
 }
-  
+
 header {
-    padding: 0 20px;
-    height: 60px;
-    display: flex;
-    justify-content: space-between;
+  padding: 0 20px;
+  height: 60px;
+  display: flex;
+  justify-content: space-between;
 }
 
 ul {
-    list-style: none;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-  
-ul a {
-    color: white;
-}
-  
-ul li {
-    padding: 5px;
-    margin-left: 10px;
+  list-style: none;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
 }
 
-.navbar>ul>li {
-    white-space: nowrap;
-    padding: 10px 0 10px 30px;
+ul a {
+  color: white;
+}
+
+ul li {
+  padding: 5px;
+  margin-left: 10px;
+}
+
+.navbar > ul > li {
+  white-space: nowrap;
+  padding: 10px 0 10px 30px;
 }
 
 .navbar a,
 .navbar a:focus {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
-    color: #fff;
-    font-size: var(--default-font-size);
-    font-weight: 600;
-    padding: 0;
-    white-space: nowrap;
-    transition: 0.3s;
-    letter-spacing: 0.4px;
-    position: relative;
-    text-transform: uppercase;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  color: #fff;
+  font-size: var(--default-font-size);
+  font-weight: 600;
+  padding: 0;
+  white-space: nowrap;
+  transition: 0.3s;
+  letter-spacing: 0.4px;
+  position: relative;
+  text-transform: uppercase;
 }
 
 .navbar a i,
 .navbar a:focus i {
-    font-size: var(--small-font-size);
-    line-height: 0;
-    margin-left: 5px;
+  font-size: var(--small-font-size);
+  line-height: 0;
+  margin-left: 5px;
 }
 
-.navbar>ul>li>a:before {
-    content: "";
-    position: absolute;
-    width: 100%;
-    height: 2px;
-    bottom: -6px;
-    left: 0;
-    width: 0;
-    background-color: #fff;
-    visibility: hidden;
-    transition: all 0.3s ease-in-out 0s;
+.navbar > ul > li > a:before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 2px;
+  bottom: -6px;
+  left: 0;
+  width: 0;
+  background-color: #fff;
+  visibility: hidden;
+  transition: all 0.3s ease-in-out 0s;
 }
 
 .navbar a:hover:before,
-.navbar li:hover>a:before,
+.navbar li:hover > a:before,
 .navbar .active:before {
-    visibility: visible;
-    width: 80%;
+  visibility: visible;
+  width: 80%;
 }
 
 .navbar a:hover,
 .navbar .active,
 .navbar .active:focus,
-.navbar li:hover>a {
-    color: #fff;
+.navbar li:hover > a {
+  color: #fff;
 }
 
 .logo {
-    font-weight: bold;
-    font-size: 40px;
-    display: flex;
-    align-items: center;
-    cursor: pointer;
-    color: white;
+  font-weight: bold;
+  font-size: 40px;
+  display: flex;
+  align-items: center;
+  cursor: pointer;
+  color: white;
 }
 
 .nav-toggle {
-    color: white;
-    font-size: var(--default-font-size);
-    display: none;
-    cursor: pointer;
+  color: white;
+  font-size: var(--default-font-size);
+  display: none;
+  cursor: pointer;
 }
 
 /* Style the hamburger menu */
 #nav-toggle {
-    margin: auto 0;
-    display: none;
-    cursor: pointer;
+  margin: auto 0;
+  display: none;
+  cursor: pointer;
 }
 
 #nav-toggle div {
-    width: 35px;
-    height: 3px;
-    background-color: white;
-    margin: 6px 0;
-    transition: 0.4s;
+  width: 35px;
+  height: 3px;
+  background-color: white;
+  margin: 6px 0;
+  transition: 0.4s;
 }
-  
+
 .open .bar1 {
-    -webkit-transform: rotate(-45deg) translate(-6px, 6px);
-    transform: rotate(-45deg) translate(-6px, 6px);
+  -webkit-transform: rotate(-45deg) translate(-6px, 6px);
+  transform: rotate(-45deg) translate(-6px, 6px);
 }
-  
+
 .open .bar2 {
-    opacity: 0;
+  opacity: 0;
 }
-  
+
 .open .bar3 {
-    -webkit-transform: rotate(45deg) translate(-6px, -8px);
-    transform: rotate(45deg) translate(-6px, -8px);
+  -webkit-transform: rotate(45deg) translate(-6px, -8px);
+  transform: rotate(45deg) translate(-6px, -8px);
 }
-  
+
 .open .navbar-mobile {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: flex-start;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
 
 .navbar-mobile {
-    position: fixed;
-    top: 60px;
-    left: 0;
-    right: 0;
-    height: auto;
-    background: rgba(78, 78, 78, 0.9);
+  position: fixed;
+  top: 60px;
+  left: 0;
+  right: 0;
+  height: auto;
+  background: rgba(78, 78, 78, 0.9);
 }
 
 .navbar-mobile a:hover {
-    text-decoration: underline;
+  text-decoration: underline;
 }
 
-
 @media (max-width: 991px) {
-    .navbar ul {
-        display: none;
-    }
-
-    #nav-toggle {
-        display: block;
-      }
-      
+  .navbar ul {
+    display: none;
   }
+
+  #nav-toggle {
+    display: block;
+  }
+}
 
 /*--------------------------------------------------------------
                             HERO
 --------------------------------------------------------------*/
 .hero {
-    height: 100vh;
-    position: relative;
-    color: #fff;
-    background-image: linear-gradient(
-    135deg,
-    var(--primary-color) 0%,
-    var(--secondary-color) 100%
-  );
-  
-  }
-  
+  height: 100vh;
+  position: relative;
+  color: #fff;
+  background-color: var(--primary-color);
+}
+
 .hero-content {
-    text-align: center;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%,-50%);
+  text-align: center;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
 .hero-title {
-    color: #fff;
-    font-weight: 600;
-    font-size: var(--big-font-size);
+  color: #fff;
+  font-weight: 600;
+  font-size: var(--big-font-size);
 }
-  
-.hero-title, .introText, .introName, .introPara {
-    animation: fadeIn 2s;
+
+.hero-title,
+.introText,
+.introName,
+.introPara {
+  animation: fadeIn 2s;
 }
 
 .introPara {
-    font-size: var(--default-font-size);
+  font-size: var(--default-font-size);
 }
 
 .introName {
-    color: pink;
+  color: var(--secondary-color);
 }
 
 /*--------------------------------------------------------------
@@ -280,53 +285,53 @@ ul li {
 --------------------------------------------------------------*/
 
 #about {
-    background-color: var(--white-background-color);
-    height: 100%;
-    
+  background-color: var(--white-background-color);
+  height: 100%;
 }
 
 .about-container {
-    background-color: white;
-    box-shadow: 0 15px 10px -15px rgba(0, 0, 0, 0.1);
-    padding-bottom: 5%;
+  background-color: white;
+  box-shadow: 0 15px 10px -15px rgba(0, 0, 0, 0.1);
+  padding-bottom: 5%;
 }
 
 .about-wrapper {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 .about-image {
-    display: flex;
-    align-items: center;
-    justify-content: center;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
+
 .about-title {
-    text-align: center;
-    padding: 15px;
-    font-size: var(--mid-font-size);
-    text-decoration: underline;
-    text-decoration-color: var(--secondary-color);
+  text-align: center;
+  padding: 15px;
+  font-size: var(--mid-font-size);
+  text-decoration: underline;
+  text-decoration-color: var(--secondary-color);
 }
 
 .about-content {
-    display: flex;
-    height: 100%;
-    justify-content: center;
-    flex-direction: column;
-    font-size: var(--small-font-size);
-    padding: 20px;
-    color: black;
+  display: flex;
+  height: 100%;
+  justify-content: center;
+  flex-direction: column;
+  font-size: var(--small-font-size);
+  padding: 20px;
+  color: black;
 }
 
 @media screen and (max-width: 1000px) {
-    .hero-title {
-        font-size: var(--mid-font-size)
-    }
-    .introPara {
-        font-size: var(--small-font-size);
-    }
+  .hero-title {
+    font-size: var(--mid-font-size);
+  }
+  .introPara {
+    font-size: var(--small-font-size);
+  }
 }
 
 /*--------------------------------------------------------------
@@ -334,207 +339,202 @@ ul li {
 --------------------------------------------------------------*/
 
 #skills {
-    background-image: linear-gradient(
-    135deg,
-    var(--gradient-primary-color) 0%,
-    var(--primary-color) 100%
-  );
+  background-color: var(--third-color);
   color: white;
   border-top: 0px;
 }
 
-
-.skill-desc {
-    color: black;
-    font-size: var(--small-font-size);
-}
-
-.skill-box {
-    background-color: #fff;
-    padding: 2.5rem 1.3rem;
-    border-radius: 1rem;
-    margin-bottom: 3rem;
-    text-align: center;
-}
-
-.skill-box .skill-icon {
-    margin-bottom: 1rem;
-    color: #1e1e1e;
-}
-
-.skill-box .fa-circle {
-    transition: all 500ms ease;
-    display: inline-flex;
-    align-items: center;
-    justify-content: center;
-    color: var(--gradient-primary-color);
-}
-
-.skill-box .fa-circle i {
-    line-height: 0;
-    font-size: 40px;
-}
-
-.skill-box:hover .fa-circle {
-    transition: all 500ms ease;
-    color: var(--gradient-secondary-color);
-}
-
-.skill-box:hover {
-    box-shadow: 0 10px 20px -10px #333;
-    transform: scale(1.1);
-}
-
-.skill-box .skill-title {
-    font-size: 1.4rem;
-    text-align: center;
-    padding: 0.4rem 0;
-}
-
-.skill-box .skill-content {
-    color: #4e4e4e;
-}
-
 .skills-main-title {
-    text-align: center;
-    text-decoration: underline;
-    text-decoration-color: var(--secondary-color);
-    padding: 15px;
-    font-size: var(--mid-font-size);
-    color: white;
+  color: white;
 }
 
 .skill-main-desc {
-    color: white;
+    text-align: center;
+    padding-bottom: 30px;
 }
 
+
+.skill-desc {
+  color: black;
+  font-size: var(--small-font-size);
+}
+
+.skill-box {
+  background-color: #fff;
+  padding: 2.5rem 1.3rem;
+  border-radius: 1rem;
+  margin-bottom: 3rem;
+  text-align: center;
+}
+
+.skill-box .skill-icon {
+  margin-bottom: 1rem;
+  color: #1e1e1e;
+}
+
+.skill-box .fa-circle {
+  transition: all 500ms ease;
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--gradient-primary-color);
+}
+
+.skill-box .fa-circle i {
+  line-height: 0;
+  font-size: 40px;
+}
+
+.skill-box:hover .fa-circle {
+  transition: all 500ms ease;
+  color: var(--gradient-secondary-color);
+}
+
+.skill-box:hover {
+  box-shadow: 0 10px 20px -10px #333;
+  transform: scale(1.1);
+}
+
+.skill-box .skill-title {
+  font-size: 1.4rem;
+  text-align: center;
+  padding: 0.4rem 0;
+  text-transform:uppercase;
+  font-weight: bold;
+  letter-spacing: 1px;
+}
+
+.skill-box .skill-content {
+  color: #4e4e4e;
+}
+
+.skill-box .skill-content-icons {
+    font-size: 4rem;
+}
 /*--------------------------------------------------------------
                             PROJECTS
 --------------------------------------------------------------*/
 .projects {
-    height: auto;
-    background-color: var(--white-background-color);
-    color: black;
-}
-
-.projects-title {
-    text-align: center;
-    text-decoration: underline;
-    text-decoration-color: var(--secondary-color);
-    padding: 15px;
+  height: auto;
+  background-color: var(--white-background-color);
+  color: black;
 }
 
 .projectImg {
-    object-fit: cover;
-    height: 20rem;
-    width: 40rem;
-    margin: 0.5rem;
-    transition: transform 0.5s;
+  object-fit: cover;
+  height: 20rem;
+  width: 40rem;
+  margin: 0.5rem;
+  transition: transform 0.5s;
 }
 
 .project-btn {
-    position: relative;
-    display: inline-block;
-    text-decoration: none;
-    padding: 0.8rem var(--default-font-size);
-    border-width: 2px;
-    border-style: solid;
-    color: var(--gradient-secondary-color);
-    transition: background-color 0.5s;
+  position: relative;
+  display: inline-block;
+  text-decoration: none;
+  padding: 0.8rem var(--default-font-size);
+  border-width: 2px;
+  border-style: solid;
+  color: var(--gradient-secondary-color);
+  transition: background-color 0.5s;
 }
 
 .project-btn:hover {
-    color: white;
-    background-color: var(--gradient-secondary-color);
+  color: white;
+  background-color: var(--gradient-secondary-color);
 }
 
 .projectImg:hover {
-    box-shadow: 0 10px 20px -10px #333;
-    transform: scale(1.1);
+  box-shadow: 0 10px 20px -10px #333;
+  transform: scale(1.1);
 }
 /*--------------------------------------------------------------
                             CONTACT
 --------------------------------------------------------------*/
 #contact {
-    margin: 0 auto;
-    text-align: center;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    background-color: var(--white-background-color);
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: var(--fourth-color);
+  color: white;
 }
 
-.contactTitle {
-    font-size: var(--default-font-size);
-    margin-bottom: 1rem;
+.contact-title {
+  color: white;
 }
 
-.contactDesc {
-    padding: 0.5rem;
-    font-size: var(--default-font-size);
-    font-weight: 300;
+.contact-desc {
+  padding: 0.5rem;
 }
 
 .contactForm {
-    margin: 1rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 90vw;
-    max-width: 60rem;
+  margin: 1rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  width: 90vw;
+  max-width: 60rem;
 }
 
-.name, .email, .msg {
-    font-size: medium;
-    width: 100%;
-    max-width: 40rem;
-    margin: 0.5rem;
-    padding: 1rem 1rem;
-    color: black;
-    border: none;
-    border-radius: 0.5rem;
-    background: white;
+.name,
+.email,
+.msg {
+  font-size: medium;
+  width: 100%;
+  max-width: 40rem;
+  margin: 0.5rem;
+  padding: 1rem 1rem;
+  color: black;
+  border: none;
+  border-radius: 0.5rem;
+  background: white;
 }
 
 .submitBtn {
-    background: white;
-    border: none;
-    border-radius: 0.5rem;
-    margin: 2rem;
-    padding: 0.75rem 3.5rem;
+  background: white;
+  border: none;
+  border-radius: 0.5rem;
+  margin: 2rem;
+  padding: 0.75rem 3.5rem;
 }
 
 .submitBtn:hover {
-    background: #cac9c9;
+  background: #cac9c9;
 }
 
 /*--------------------------------------------------------------
                             FOOTER
 --------------------------------------------------------------*/
 footer {
-    width: 100vw;
-    padding: 50px 0;
-    text-align: center;
-    background-color: #333;
+  width: 100vw;
+  padding: 50px 0;
+  text-align: center;
+  background-color: #333;
 }
 
 .home_social {
-    font-size: 30px;
-    letter-spacing: 5px;
+  font-size: 30px;
+  letter-spacing: 5px;
 }
 
 .home_social a {
-    text-decoration: none;
-    color: white;
+  text-decoration: none;
+  color: white;
 }
 
 .home_social a:hover {
-    filter: brightness(80%);
+  filter: brightness(80%);
 }
 
 @keyframes fadeIn {
-    0% { opacity: 0; }
-    100% { opacity: 1; }
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
