--- a/styles.css
+++ b/styles.css
@@ -342,6 +342,7 @@ ul li {
   background-color: var(--third-color);
   color: white;
   border-top: 0px;
+  height: auto;
 }
 
 .skills-main-title {
@@ -411,13 +412,28 @@ ul li {
 .skill-box .skill-content-icons {
     font-size: 4rem;
 }
+
+@media (max-width: 991px) {
+  #skills-container {
+    margin-bottom: 0rem;
+  }
+  
+}
 /*--------------------------------------------------------------
                             PROJECTS
 --------------------------------------------------------------*/
 .projects {
-  height: auto;
   background-color: var(--white-background-color);
   color: black;
+  height: auto;
+}
+
+.projects-container {
+  margin-bottom: 15rem;
+}
+
+.projects-desc {
+  text-align: center;
 }
 
 .projectImg {
@@ -447,6 +463,17 @@ ul li {
 .projectImg:hover {
   box-shadow: 0 10px 20px -10px #333;
   transform: scale(1.1);
+}
+
+@media (max-width: 991px) {
+  .projects-container {
+    margin-bottom: 0rem;
+  }
+  
+  .projectImg {
+    height: 20rem;
+    width: 30rem;
+  }
 }
 /*--------------------------------------------------------------
                             CONTACT
