Improved styling and colours

--- a/styles.css
+++ b/styles.css
@@ -1,18 +1,19 @@
 :root {
-  --white-background-color: #f5f5f5;
+  --white-background-color: whitesmoke;
 
-  --primary-color: #FD6F96;
-  --secondary-color: #FFEBA1;
-  --third-color: #95DAC1;
+  --primary-color: #C53678;
+  --secondary-color: #FF5841;
+  --third-color: snow;
   --fourth-color: #6F69AC;
+  --font-color: #25171A;
 
   --gradient-primary-color: #a770ef;
   --gradient-secondary-color: #00cdac;
 
-  --default-font-size: 1.5rem;
-  --big-font-size: 2.5rem;
-  --mid-font-size: 1.3rem;
-  --small-font-size: 1.1rem;
+  --default-font-size: 1.3rem;
+  --big-font-size: 3.5rem;
+  --mid-font-size: 1.5rem;
+  --small-font-size: 1rem;
   --extrasmall-font-size: 0.5rem;
 }
 
@@ -26,9 +27,9 @@
 }
 
 body {
-  background: #610c9f;
-  color: var(--white-background-color);
+  color: var(--font-color);
   overflow: hidden;
+  background-color: whitesmoke;
 }
 
 html {
@@ -46,7 +47,7 @@ h6 {
 }
 
 h1 a {
-  color: white;
+  color: var(--font-color);
   text-decoration: none;
 }
 
@@ -70,9 +71,7 @@ section {
 .title {
     text-align: center;
     padding: 15px;
-    font-size: var(--big-font-size);
-    text-decoration: underline;
-    text-decoration-color: var(--secondary-color);
+    font-size: var(--big-font-size);;
   }
 
 /*--------------------------------------------------------------
@@ -80,7 +79,7 @@ section {
 --------------------------------------------------------------*/
 
 .header-scrolled {
-  background-color: rgba(78, 78, 78, 0.8);
+  background-color: rgba(255, 255, 255, 0.8);
 }
 
 header a {
@@ -103,7 +102,7 @@ ul {
 }
 
 ul a {
-  color: white;
+  color: var(--font-color);
 }
 
 ul li {
@@ -121,8 +120,8 @@ ul li {
   display: flex;
   align-items: center;
   justify-content: space-between;
-  color: #fff;
-  font-size: var(--small-font-size);
+  color: var(--font-color);
+  font-size: var(--default-font-size);
   font-weight: 600;
   padding: 0;
   white-space: nowrap;
@@ -147,7 +146,6 @@ ul li {
   bottom: -6px;
   left: 0;
   width: 0;
-  background-color: #fff;
   visibility: hidden;
   transition: all 0.3s ease-in-out 0s;
 }
@@ -163,7 +161,7 @@ ul li {
 .navbar .active,
 .navbar .active:focus,
 .navbar li:hover > a {
-  color: #fff;
+  color: var(--primary-color)
 }
 
 .logo {
@@ -172,11 +170,11 @@ ul li {
   display: flex;
   align-items: center;
   cursor: pointer;
-  color: white;
+  color: var(--font-color);
 }
 
 .nav-toggle {
-  color: white;
+  color: var(--font-color);
   font-size: var(--default-font-size);
   display: none;
   cursor: pointer;
@@ -192,7 +190,7 @@ ul li {
 #nav-toggle div {
   width: 35px;
   height: 3px;
-  background-color: white;
+  background-color: var(--font-color);
   margin: 6px 0;
   transition: 0.4s;
 }
@@ -215,16 +213,20 @@ ul li {
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: flex-start;
+  justify-content: center;
 }
 
 .navbar-mobile {
   position: fixed;
-  top: 60px;
-  left: 0;
+  animation: fadeIn 0.4s;
   right: 0;
   height: auto;
-  background: rgba(78, 78, 78, 0.9);
+  border-radius: 15%;
+  background: rgba(104, 104, 104, 0.7);
+}
+
+.navbar-mobile a {
+  color: white;
 }
 
 .navbar-mobile a:hover {
@@ -244,25 +246,29 @@ ul li {
 /*--------------------------------------------------------------
                             HERO
 --------------------------------------------------------------*/
-.hero {
-  height: 100vh;
-  position: relative;
-  color: #fff;
-  background-color: var(--primary-color);
+#hero {
+  display: flex;
+  justify-content: center;
+  color: var(--font-color);
+}
+
+.hero__pic-container {
+  display: flex;
+  height: 35rem;
+  width: 30rem;
+  margin: auto 0;
+  mix-blend-mode: multiply;
 }
 
 .hero-content {
+  align-self: center;
   text-align: center;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
 }
 
 .hero-title {
-  color: #fff;
+  color: var(--font-color);
   font-weight: 600;
-  font-size: var(--big-font-size);
+  font-size: 2.5rem;
 }
 
 .hero-title,
@@ -273,11 +279,96 @@ ul li {
 }
 
 .introPara {
-  font-size: var(--default-font-size);
+  font-size: 1.5rem;
 }
 
 .introName {
-  color: var(--secondary-color);
+  font-weight: 600;
+  color: var(--primary-color);
+  font-size: var(--big-font-size);
+}
+
+.greetings-animation {
+  font-size: 2.5rem;
+  font-weight: 600;
+}
+
+.greetings-animation span {
+  position: relative;
+}
+
+.greetings-animation span::before {
+  content: "Hello";
+  color: var(--font-color);
+  animation: words 15s infinite;
+}
+
+.greetings-animation span::after {
+  content: "";
+  background-color: whitesmoke;
+  color: var(--font-color);
+  position: absolute;
+  width: calc(100% + 8px);
+  height: 100%;
+  border-left: 3px solid var(--primary-color);
+  right: -8px;
+  animation: cursor 0.6s infinite, typing 15s infinite;
+
+}
+
+@keyframes cursor {
+  to {
+    border-left: 2px solid whitesmoke;
+  }
+}
+
+@keyframes words {
+  0%,
+  20% {
+    content: "Bonjour !"
+  }
+  21%,
+  40% {
+    content: "你好 !";
+  }
+  41%,
+  60% {
+    content: "こんにちは !"
+  }
+  61%,
+  80% {
+    content: "안녕하세요 !";
+  }
+  81%,
+  100% {
+    content: "Hello !";
+  }
+}
+
+@keyframes typing {
+  10%,
+  15%,
+  30%,
+  35%,
+  50%,
+  55%,
+  70%,
+  75%,
+  90%,
+  95% {
+    width: 0;
+  }
+  5%,
+  20%,
+  25%,
+  40%,
+  45%,
+  60%,
+  65%,
+  80%,
+  85% {
+    width: calc(100% + 8px);
+  }
 }
 
 /*--------------------------------------------------------------
@@ -285,13 +376,12 @@ ul li {
 --------------------------------------------------------------*/
 
 #about {
-  background-color: var(--white-background-color);
-  height: 100%;
+  background-color: var(--primary-color);
+  color: white;
+  height: auto;
 }
 
 .about-container {
-  background-color: white;
-  box-shadow: 0 15px 10px -15px rgba(0, 0, 0, 0.1);
   padding-bottom: 5%;
 }
 
@@ -309,10 +399,9 @@ ul li {
 
 .about-title {
   text-align: center;
-  padding: 15px;
+  padding: 20px;
   font-size: var(--big-font-size);
-  text-decoration: underline;
-  text-decoration-color: var(--secondary-color);
+  color: white;
 }
 
 .about-content {
@@ -320,9 +409,9 @@ ul li {
   height: 100%;
   justify-content: center;
   flex-direction: column;
-  font-size: var(--small-font-size);
+  font-weight: light;
+  font-size: var(--default-font-size);
   padding: 20px;
-  color: black;
 }
 
 @media screen and (max-width: 1000px) {
@@ -339,37 +428,41 @@ ul li {
 --------------------------------------------------------------*/
 
 #skills {
-  background-color: var(--third-color);
-  color: white;
+  color: var(--font-color);
   border-top: 0px;
+  animation: fadeIn 2s;
   height: auto;
 }
 
 .skills-main-title {
-  color: white;
+  color: var(--font-color);
 }
 
 .skill-main-desc {
     text-align: center;
     padding-bottom: 30px;
+    font-size: var(--default-font-size);
 }
 
 
 .skill-desc {
   color: black;
-  font-size: var(--small-font-size);
+  font-size: var(--default-font-size);
 }
 
 .skill-box {
   background-color: #fff;
   padding: 2.5rem 1.3rem;
+  border: rgb(85, 84, 84) 0.3rem dotted;
+  box-shadow: 0 10px 15px -10px #333;
   border-radius: 1rem;
   margin-bottom: 3rem;
   text-align: center;
 }
 
-.skill-box .skill-icon {
+.skill-icon {
   margin-bottom: 1rem;
+  font-size: 30px;
   color: #1e1e1e;
 }
 
@@ -378,7 +471,7 @@ ul li {
   display: inline-flex;
   align-items: center;
   justify-content: center;
-  color: var(--gradient-primary-color);
+  color: var(--primary-color);
 }
 
 .skill-box .fa-circle i {
@@ -388,7 +481,7 @@ ul li {
 
 .skill-box:hover .fa-circle {
   transition: all 500ms ease;
-  color: var(--gradient-secondary-color);
+  color: var(--secondary-color);
 }
 
 .skill-box:hover {
@@ -423,9 +516,9 @@ ul li {
                             PROJECTS
 --------------------------------------------------------------*/
 .projects {
-  background-color: var(--white-background-color);
   color: black;
   height: auto;
+  animation: fadeIn 2s;
 }
 
 .projects-container {
@@ -439,6 +532,7 @@ ul li {
 
 .projects-desc {
   text-align: center;
+  font-size: var(--default-font-size);
 }
 
 .projectImg {
@@ -457,13 +551,13 @@ ul li {
   padding: 0.8rem var(--default-font-size);
   border-width: 2px;
   border-style: solid;
-  color: var(--gradient-secondary-color);
+  color: var(--primary-color);
   transition: background-color 0.5s;
 }
 
 .project-btn:hover {
   color: white;
-  background-color: var(--gradient-secondary-color);
+  background-color: var(--primary-color);
 }
 
 .projectImg:hover {
@@ -485,14 +579,18 @@ ul li {
                             CONTACT
 --------------------------------------------------------------*/
 #contact {
-  margin: 0 auto;
+  background-color: var(--primary-color);
+  color: white;
+  height: auto;
+}
+
+.contact__form {
+  padding: 2rem;
   text-align: center;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  background-color: var(--fourth-color);
-  color: white;
 }
 
 .contact-title {
@@ -547,6 +645,7 @@ footer {
   padding: 50px 0;
   text-align: center;
   background-color: #333;
+  color: white;
 }
 
 .back-to-top i {
