--- a/styles.css
+++ b/styles.css
@@ -10,8 +10,9 @@
   --header-scrolled: rgba(255, 255, 255, 0.8);
 
   --default-font-size: 1.3rem;
+  --defaultMid-font-size: 1.5rem;
   --big-font-size: 3.5rem;
-  --mid-font-size: 1.5rem;
+  --mid-font-size: 2rem;
   --small-font-size: 1rem;
   --extrasmall-font-size: 0.5rem;
 }
@@ -110,9 +111,9 @@ section {
 
 .theme-switch {
   display: inline-block;
-  height: 34px;
+  height: 2.5rem;
   position: relative;
-  width: 60px;
+  width: 5rem;
 }
 
 .theme-switch input {
@@ -134,11 +135,11 @@ section {
   background: #fff;
   bottom: 4px;
   content: "";
-  height: 26px;
+  height: 2rem;
   left: 4px;
   position: absolute;
   transition: 0.4s;
-  width: 26px;
+  width: 1.9rem;
 }
 
 input:checked + .slider {
@@ -146,7 +147,7 @@ input:checked + .slider {
 }
 
 input:checked + .slider::before {
-  transform: translateX(26px);
+  transform: translateX(2.6rem);
 }
 
 .slider.round {
@@ -158,7 +159,7 @@ input:checked + .slider::before {
 }
 
 .fas {
-  font-size: 30px;
+  font-size: var(--mid-font-size);
   margin-right: 5px;
 }
 
@@ -205,7 +206,7 @@ ul li {
   align-items: center;
   justify-content: space-between;
   color: var(--font-color);
-  font-size: var(--mid-font-size);
+  font-size: var(--defaultMid-font-size);
   font-weight: 600;
   padding: 0;
   white-space: nowrap;
@@ -470,6 +471,18 @@ ul li {
     flex-direction: column;
   }
 
+  .introName {
+    font-size: 3rem;
+  }
+
+  .hero-title {
+    font-size: 3rem;
+  }
+
+  .introPara {
+    font-size: 2.2rem;
+  }
+
   .hero__pic-container {
     margin: 5rem;
   }
@@ -516,15 +529,6 @@ ul li {
   font-weight: light;
   font-size: var(--default-font-size);
   padding: 20px;
-}
-
-@media screen and (max-width: 1000px) {
-  .hero-title {
-    font-size: var(--big-font-size);
-  }
-  .introPara {
-    font-size: var(--small-font-size);
-  }
 }
 
 /*--------------------------------------------------------------
@@ -606,8 +610,8 @@ ul li {
   color: #4e4e4e;
 }
 
-.skill-box .skill-content-icons {
-    font-size: 4rem;
+.skill-icon-lang {
+    font-size: var(--big-font-size);
 }
 
 @media (max-width: 991px) {
@@ -643,9 +647,14 @@ ul li {
   color: var(--font-color);
 }
 
+.project-text {
+  font-size: var(--default-font-size);
+}
+
+
 .projectImg {
   object-fit: cover;
-  height: 20rem;
+  height: 25rem;
   width: 40rem;
   margin: 0.5rem;
   transition: transform 0.5s;
@@ -662,6 +671,7 @@ ul li {
   color: var(--primary-color);
   transition: background-color 0.5s;
   background-color: whitesmoke;
+  font-size: var(--default-font-size);
 }
 
 .project-btn:hover {
@@ -679,10 +689,7 @@ ul li {
     margin-bottom: 0rem;
   }
   
-  .projectImg {
-    height: 20rem;
-    width: 30rem;
-  }
+  
 }
 /*--------------------------------------------------------------
                             CONTACT
@@ -700,6 +707,7 @@ ul li {
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  font-size: var(--default-font-size);
 }
 
 .contact-title {
@@ -755,6 +763,7 @@ footer {
   text-align: center;
   background-color: #333;
   color: white;
+  font-size: var(--small-font-size);
 }
 
 .back-to-top i {
@@ -768,7 +777,7 @@ footer {
 }
 
 .home_social {
-  font-size: 30px;
+  font-size: 3rem;
   letter-spacing: 5px;
 }
 
