--- a/styles.css
+++ b/styles.css
@@ -353,6 +353,10 @@ ul li {
   height: 25rem;
   width: 40rem;
   margin: auto 0;
+  animation-duration: 2s;
+  animation-iteration-count: infinite;
+  animation-name: bounce;
+  animation-timing-function: ease;
 }
 
 .hero-content {
@@ -409,6 +413,12 @@ ul li {
   right: -8px;
   animation: cursor 0.6s infinite, typing 15s infinite;
 
+}
+
+@keyframes bounce {
+  0%   { transform: translateY(0); }
+  50%  { transform: translateY(-20px); }
+  100% { transform: translateY(0); }
 }
 
 @keyframes cursor {
@@ -538,7 +548,6 @@ ul li {
 #skills {
   color: var(--font-color);
   border-top: 0px;
-  animation: fadeIn 2s;
   height: auto;
 }
 
@@ -626,7 +635,6 @@ ul li {
 .projects {
   color: var(--font-color);
   height: auto;
-  animation: fadeIn 2s;
 }
 
 .projects-container {
